--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+/* body {
   background-color: #112236;
-}
+} */
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
